fix missing scrollbar in documentation
changes made to .main-wrapper {.content-wrapper{
-left property change to 0
-padding property changed to 40px 0px 0px 360px;

change z-index so sidebar still clickable

added a z-index of 1 to .main-wrapper >  .desktop-docs-sidebar

--- a/docs/public/docs/sass/index/_content.scss
+++ b/docs/public/docs/sass/index/_content.scss
@@ -6,11 +6,11 @@
     @media #{$large-and-up} {
       position: absolute;
       top: 64px;
-      left: 300px;
+      left: 0;
       right: 0;
       bottom: 0;
       overflow: auto;
-      padding: 40px 0px 0px 60px;
+      padding: 40px 0px 0px 360px;
     }
 
     .docs-content {
